--- a/淘宝搜索/淘宝搜索案例/css/search.css
+++ b/淘宝搜索/淘宝搜索案例/css/search.css
@@ -72,3 +72,15 @@
 .btnSearch:hover {
   opacity: 0.9;
 }
+.suggest-list {
+  border: 1px solid #ccc;
+  display: none;
+}
+.suggest-item {
+  line-height: 20px;
+  padding-left: 5px;
+}
+.suggest-item:hover {
+  cursor: pointer;
+  background-color: #eee;
+}
